// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockQuote should render default BlockQuote 1`] = `
<blockquote>
  <p
    className={null}
  />
  <cite
    className="coop-t-blockquote__citation"
  />
</blockquote>
`;

exports[`BlockQuote should work with all variants 1`] = `
<div>
  <blockquote>
    <p
      className="newClass"
    >
      Quote
    </p>
    <cite
      className="coop-t-blockquote__citation"
    >
      cite
    </cite>
  </blockquote>
</div>
`;
